enter key handler

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </section>
 
       <div id="no-phone-found" class="d-none">
-        <h4 class="text-center text-warning">No phone found</h4>
+        <h4 class="text-center text-primary mt-5"> Please Enter correct Phone name </h4>
       </div>
       <!-- modal show -->
        <section> 
